--- a/src/bc-phone-number.html
+++ b/src/bc-phone-number.html
@@ -3,7 +3,7 @@
     <button type="button" class="btn btn-default" type="button" uib-dropdown-toggle>
       <span class="glyphicon iti-flag bc-phone-number-flag" ng-class="selectedCountry.iso2Code"></span><span class="caret"></span>
     </button>
-    <ul class="uib-dropdown-menu bc-phone-number-dropdown-menu" role="menu">
+    <ul class="uib-dropdown-menu bc-phone-number-dropdown-menu dropdown-menu" role="menu">
       <li ng-repeat="country in preferredCountries" ng-click="selectCountry(country)"
           ng-class="{active: isCountrySelected(country)}" role="menuitem">
         <a href="#" ng-click="$event.preventDefault()" class="bc-phone-number-country-anchor">
@@ -21,5 +21,5 @@
       </li>
     </ul>
   </div>
-  <input type="tel" class="form-control" ng-model="number"/>
+  <input type="tel" class="form-control" ng-model="number" ng-disabled="ngDisabled" ng-change="changed()"/>
 </section>
